[updated] fixed footer on mobile

--- a/brand/styles.css
+++ b/brand/styles.css
@@ -48,14 +48,28 @@
 
 /* change footer logo to official light logo */
 #footer a img.dark\:hidden {
-    height: 3rem;
     content:url("https://mintlify.s3.us-west-1.amazonaws.com/glean-dd126214/brand/images/glean-logo-light.svg");
 }
 
 /* change footer logo to official dark logo */
 #footer a img.dark\:block {
-    height: 3rem;
     content:url("https://mintlify.s3.us-west-1.amazonaws.com/glean-dd126214/brand/images/glean-logo-dark.svg");
+}
+
+/* remove footer links on mobile */
+@media screen and (max-width: 768px) {
+    #footer .min-h-\[76px\] {
+        min-height: 0;
+    }
+    #footer .min-h-\[76px\] > :nth-child(2) {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    #footer a img {
+        height: 3rem;
+    }
 }
 
 /* space out tight tracking */
